# spm-rs

./: Cargo.toml  LICENSE  README.md
src/: igor_ibw.rs  lib.rs  main.rs  mulfile.rs  omicron_matrix.rs  omicron_matrix_param.rs  omicron_matrix_scan.rs  paraminfo.rs  rhk_sm4.rs  rocket.rs  spm_image.rs  utils.rs
src/omicron_matrix/: mod.rs  omicron_matrix.rs  paramfile.rs  paraminfo.rs  scanfile.rs
tests/: test_igor_ibw.rs  test_mulfile.rs  test_omicron_matrix.rs  test_rhk_sm4.rs
tests/test_files/: test_3d_wave.ibw  test_4d_wave.ibw  test_matrix.ibw
