[package]
name = "spm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4"
clap = { version = "4.0.17", features = ["derive"] }
eframe = "0.19.0"
egui_extras = {version = "0.19.0", features = ["image"] }
image = "0.24"
nalgebra = "0.31.1"
