[package]
name = "spm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4"
clap = { version = "4.5.3", features = ["derive"] }
eframe = "0.26.2"
egui_extras = {version = "0.26.2", features = ["image"] }
image = "0.25"
linfa-linalg = { version = "0.1.0", default-features = false }
ndarray = "0.15.6"
rfd = "0.14.1"
